# anda

./: .gitignore  Cargo.toml  pyproject.toml
anda_cli/src/: main.rs
anda_engine/: Cargo.toml
anda_engine/src/context/: base.rs
anda_web3_client/src/: client.rs
examples/icp_ledger_agent/: Cargo.toml
examples/icp_ledger_agent/src/: agent.rs  main.rs
tools/anda_bsc/: Cargo.toml
tools/anda_bsc/src/ledger/: balance.rs  mod.rs  transfer.rs
tools/anda_py/: Cargo.toml  README.md
tools/anda_py/docs/: Anda_DB_py_FRD.md  Anda_DB_py_arch_chart.md  Anda_DB_py_tasks.md  memory.md
tools/anda_py/examples/: test_kip_stateful_execution.rs  test_kip_validation.rs
tools/anda_py/src/: lib.rs
tools/anda_py/tests_py/: test_bindings.py
