[package]
name = "anda_bsc"
description = "Anda agent tools offers integration with the Binance Smart Chain (BSC)."
repository = "https://github.com/ldclabs/anda/tree/main/tools/anda_bsc"
publish = true
version = "0.6.0"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anda_core = { path = "../../anda_core", version = "0.6" }
anda_engine = { path = "../../anda_engine", version = "0.6" }
candid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
num-traits = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
icrc-ledger-types = "0.1"
eyre = "0.6"
alloy = { workspace = true }

[dev-dependencies]
