[package]
name = "anda_py"
version = "0.1.0"
edition = "2021"

[lib]
name = "anda_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python Bindings
pyo3 = { version = "0.21.2", features = ["extension-module", "serde"] }

# Internal Workspace Crates
anda_core = { path = "../../anda_core" }
anda_engine = { path = "../../anda_engine" }

# External Workspace Crates
anda_db = { workspace = true }
anda_kip = { workspace = true }
anda_cognitive_nexus = { workspace = true }
anda_object_store = { workspace = true }

# Other Crates
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
candid = { workspace = true }
object_store = { workspace = true }
